testsuite/escript/func/var-args-err-default-value.err
var-args-err-default-value.src:1:15: error: Rest parameter 'args' cannot have a default value.