testsuite/escript/func/var-args-err-default-value.src
function sum( args ... := 1 )
  return $"sum of {args}";
endfunction

sum();
